Deleting a button and typing text afterwards applies wrong styling to the typed text

Deleting a button and typing text afterwards applies wrong styling to the typed text
https://bugs.webkit.org/show_bug.cgi?id=107967

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=154067

This patch changes initialization of typing style not to populate from form control like elements,
which can't have range ending point, e.g. img, input, object, textarea, and so on.

* Source/WebCore/editing/DeleteSelectionCommand.cpp:
(DeleteSelectionCommand::saveTypingStylesheet): Added logic to not inherit style upon node deletion
* Source/WebCore/editing/Editing.cpp: Add "enclosingAtomicNode" return value
* Source/WebCore/editing/Editing.h: Add "enclosingAtomicNode" definition
* LayoutTests/editing/inserting/insert-without-inheriting-style.html: Added Test Case
* LayoutTests/editing/inserting/insert-without-inheriting-style-expected.txt: Added Test Case Expectations